# pide

./: .gitignore  .readthedocs.yaml  CATE  CATE_BATCH  CONTRIBUTING.md  README.md  SEEL  SEEL_GUI  paper.md  setup.py
pide/: __init__.py  inversion.py  material.py  model.py  pide.py  pyproject.toml
pide/geodyn/: deform_cond.py  geodyn_utils.py  geotherm.py  interpolate_fields.py  material_process.py  plot_models.py  read_uw_model.py  surface_cond.py  write_uw_model.py
pide/gravity/: calculate_3DModel_gravity.py
pide/imaging/: plot_distribution.py
pide/magnetic/: calculate_3DModel_magnetic.py  mag.py  susceptibility.json
pide/mt/: mt_model_conversion.py  mt_model_read.py
pide/pide_src/: init_param.csv  materials.json
pide/pide_src/cond_models/: fluids.csv  fluids_odd.py  melt.csv  melt_odd.py
pide/pide_src/cond_models/minerals/: amp.csv  amp_odd.py  cpx.csv  cpx_odd.py  garnet.csv  garnet_odd.py  graphite.csv  kfelds.csv  kfelds_odd.py  mica.csv  mica_odd.py  mixtures.csv  ol.csv  ol_odd.py  opx.csv  opx_odd.py  other.csv  perov_odd.py  perovskite.csv  plag.csv  plag_odd.py  quartz.csv  rwd_wds_odd.py  (+3 more)
pide/pide_src/eos/: Average_Composition_GEOROC.xlsx  average_melt_compositions_GEOROC.csv  fluid_eos.py  melt_composition.csv  melt_eos.py
pide/pide_src/geochem/: average_melt_compositions_GEOROC.csv
pide/pide_src/min_stab/: min_stab.py
pide/pide_src/water_partitioning/: cpx_tz_part.csv  water_part_odd.py
pide/pide_src/water_sol/: cpx_sol.csv  opx_sol.csv
pide/rheology/: olivine_rheology.py
pide/utils/: geochem.py  gis_tools.py  utils.py
(+297 files in other folders)
